@@ -23,6 +23,7 @@
   status.
 - Implemented issue #8461: Argument help text. A completely new argument
   handling was invented.
+- Implemented issue #9216: ezcConsoleInput::getOptionValues I want long names.
 
 
 1.2 - Monday 18 December 2006
